@@ -1,3 +1,7 @@
+2007-08-20 Harri Pitkänen <hatapitk@iki.fi>
+
+	* FreeBSD fix, thanks to Jaakko Heinonen
+
 2007-07-08 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add option ignore_numbers=n to voikkospell. Change
